# Smart-Shelter-Files

./: CMakeLists.txt  NEXT.md  PINOUT.md  README.md  SmartShelter 3D.stl  SmartShelter3D.scad  go.mod  main.go  mediamtx.yml  მომხმარებლის სახელმძღვანელო.docx  ორიგინალი ნახაზების ფაილები.docx
main/: CMakeLists.txt  Kconfig.projbuild  bp_link.c  bp_link.h  camera.c  camera.h  camera_pins.h  http_server.c  idf_component.yml  main.c  relay.c  relay.h  rtp_mjpeg.c  rtp_mjpeg.h  rtsp_publisher.c  rtsp_publisher.h  rtsp_server.c  rtsp_server.h  sensor_task.c  sensor_task.h  thermostat.c  thermostat.h  wifi_sta.c  wifi_sta.h
ნახაზები/: SmartShelter.stl
სტუდენტის წვლილი პროექტში/: გრიშა ტონერიანი - სტუდენტის წვლილი პროექტში.docx  თამარ ჯაში - სტუდენტის წვლილი პროექტში.docx  მარი დავლაძე - სტუდენტის წვლილი პროექტში.docx
ცხრილები/: ბიუჯეტი(კომპონენტები).xlsx  განტის დიაგრამა.xlsx  ენერგობიუჯეტი.xlsx  ინდივიდუალური წვლილი.xlsx  სპეციფიკაციები.xlsx
